--- a/style.scss
+++ b/style.scss
@@ -23,7 +23,7 @@ html {
 }
 
 body {
-	background: $white;
+	background: #0e0e0e;
   font-family: 'Source Code Pro', monospace;
   color: $grey-body;
 }
