--- a/style.scss
+++ b/style.scss
@@ -230,7 +230,7 @@ nav {
 
   a {
     margin-left: 20px;
-    color: $darkGray;
+    color: #0080ff;
     text-align: right;
     font-weight: 300;
     letter-spacing: 1px;
@@ -278,8 +278,6 @@ nav {
 
 .wrapper-footer {
   margin-top: 50px;
-  border-top: 1px solid #ddd;
-  border-bottom: 1px solid #ddd;
   background-color: #0e0e0e;
 }
 
