--- a/style.scss
+++ b/style.scss
@@ -24,7 +24,7 @@ html {
 
 body {
 	background-image: url('https://raw.githubusercontent.com/vvsys/vvsys.github.io/master/images/download.png');
-	background: #0e0e0e;
+	background-repeat: repeat;
   font-family: 'Source Code Pro', monospace;
   color: $grey-body;
 }
