--- a/style.scss
+++ b/style.scss
@@ -25,7 +25,7 @@ html {
 body {
 	// background-image: url('https://raw.githubusercontent.com/vvsys/vvsys.github.io/master/images/download.png');
 	//background-repeat: repeat;
-	background-color: $grey-body;
+	background-color: $#111111;
   font-family: 'Source Code Pro', monospace;
   color: $grey-body;
 	text-transform: lowercase;
