--- a/style.scss
+++ b/style.scss
@@ -25,9 +25,9 @@ html {
 body {
 	// background-image: url('https://raw.githubusercontent.com/vvsys/vvsys.github.io/master/images/download.png');
 	//background-repeat: repeat;
-	background-color: $#111111;
+	background-color: #0e0e0e;
   font-family: 'Source Code Pro', monospace;
-  color: $grey-body;
+  color: #0e0e0e;
 	text-transform: lowercase;
 }
 
